infrastructure/torrents/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: torrents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrents.jklu-lab.eu`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls: {}
